namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-manage-adjudications-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-manage-adjudications-test
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "dps_adjudications"
    cloud-platform.justice.gov.uk/application: "Manage adjudications"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-manage-adjudications.git"
    cloud-platform.justice.gov.uk/team-name: "dps-core"
